Fixed spacing issue on close button when modal is triggered, removed unnecessary styles from navicon, updating spacing for modals when top nav is in use

--- a/src/_blocks/masthead/_masthead.scss
+++ b/src/_blocks/masthead/_masthead.scss
@@ -7,6 +7,7 @@ $masthead_height: 72px;
 body {
 	margin-top: 75px;
 }
+
 .extraMarginTop {
 	margin-top: 148px;
 }
@@ -210,6 +211,11 @@ body {
 	}
 }
 
+.masthead__close-modals {
+	position: absolute;
+	right: 0;
+}
+
 //
 // Heavy-handed Overflow detection
 // -----------------------------
@@ -224,6 +230,7 @@ body {
 	width: 3000px;
 	color: white;
 	padding: 0 40px;
+	
 	ul {
 		display: none;
 	}
